fix: fix the bug that remove button has been covered in the shoppinglist

--- a/client/src/pages/ShoppingListPage/ShoppingListPage.css
+++ b/client/src/pages/ShoppingListPage/ShoppingListPage.css
@@ -26,10 +26,6 @@ ion-col {
 }
 
 
-.listCard {
-  /* ... */
-}
-
 ion-col ion-button[color="danger"] {
   margin-top: 2px;
   width: 100%;
